# dev_template

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.py.bak
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: __init__.py  dev_template.py
src/dev_template/: __init__.py  dev_template.py
src/dev_template/config/: config.ini
src/dev_template/templates/: .gitignore  pyproject.toml
src/dev_template/templates/src/: main.py
src/dev_template/templates/tests/: test_main.py
src/module/: dev_template.py
test/: .gitignore  setup.py
test/src/: main.py
test/tests/: __init__.py  test_main.py
tests/: test_dev_template.py
