[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev_template"
version = "1.0.3"
description = "A simplistic tool for automating the setup of new Python project directories, ensuring a consistent and efficient project structure."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pydantic==2.7.4",
    "tqdm==4.66.4",
    "colorama==0.4.6",
    "prompt_toolkit==3.0.47",
]
authors = [
    {name = "Kennedy", email = "kennedy@mylaptop.dev"}
]
maintainers = []
license = {text = "CC0-1.0"}
keywords = ["python", "project template", "automation", "development", "project setup", "best practices"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/http-kennedy/dev_template"
Source = "https://github.com/http-kennedy/dev_template"
Tracker = "https://github.com/http-kennedy/dev_template/issues"

[project.scripts]
dev_template = "dev_template.dev_template:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_template"]

[tool.setuptools.packages.find]
where = ["src"]
