[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev_template"
version = "1.1.6"
description = "A streamlined tool for quickly setting up Python project directories with simplicity and speed. Ideal for developers and hobbyists, dev_template offers interactive prompts, cross-platform compatibility, and robust configuration management to ensure a consistent project structure and efficient dependency management."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pydantic==2.7.4",
    "tqdm==4.66.4",
    "colorama==0.4.6",
    "prompt_toolkit>=3.0.36,<3.1",
    "questionary==2.0.1",
]
authors = [
    {name = "Kennedy, D."},
    {name = "Kennedy, D.", email = "kennedy@mylaptop.dev"}
]
license = {text = "CC0-1.0"}
keywords = ["python", "project setup", "automation", "development", "project structure", "dependency management", "quick start", "hobbyist", "tooling", "template"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/http-kennedy/dev_template"
Source = "https://github.com/http-kennedy/dev_template"
Tracker = "https://github.com/http-kennedy/dev_template/issues"
Documentation = "https://github.com/http-kennedy/dev_template/blob/main/README.md"

[project.scripts]
dev_template = "dev_template.dev_template:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_template"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.envs.default]
dependencies = ["pytest"]
features = ["tests"]

[tool.hatch.envs.default.scripts]
test = "hatch run test:run"

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
run = "PYTHONPATH=src pytest"

[tool.hatch.build]
include = [
    "src/dev_template/**"
]
